Bug 1347667 - unlink accessible's parent before accessible's shutdown when document shutdowns, r=yzen